[tool.poetry]
name = "storage-workflows"
version = "0.1.0"
description = ""
authors = ["Ao Chen <ao.chen@doordash.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
pytz = "^2022.2.1"
boto3 = "^1.24.54"
botocore = "^1.29.90"
PyYAML = "^6.0"
tabulate = "^0.8.10"
requests = "^2.28.1"
slack-sdk = "^3.18.1"
pytimeparse = "^1.1.8"
kubernetes = "^24.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
pytest = "^7.2.1"
psycopg2-binary = "^2.9.5"
paramiko = "^3.1.0"
sqlalchemy = "^2.0.19"
sqlalchemy-cockroachdb = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
pylint = "^2.16.1"
black = "^23.1.0"
mypy = "^1.0.0"
boto3-stubs = "^1.26.89"
botocore = "^1.29.90"
tenacity = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
storage-workflows = "storage_workflows.main:app"
crdb-repave = "storage_workflows.crdb.commands.repave:app"
generate-traffic = "storage_workflows.crdb.commands.generate_traffic:app"
crdb-health-check = "storage_workflows.crdb.commands.health_check:app"
crdb-user-management = "storage_workflows.crdb.commands.user_management:app"

[tool.pytest.ini_options]
pythonpath = "storage_workflows"
addopts = [
    "--import-mode=importlib",
]
log_cli = true
